--- a/doc/main.Rmd
+++ b/doc/main.Rmd
@@ -101,7 +101,7 @@ for(i in c(1:length(file_name_vec))){
   ## png folder is not provided on github (the code is only on demonstration purpose)
   current_tesseract_txt <- tesseract::ocr(paste("../data/png/",current_file_name,".png",sep=""))
   
-  ### clean the tessetact text (separate line by "\n", delete null string, transter to lower case)
+  ### clean the tesseract text (separate line by "\n", delete null string, transter to lower case)
   clean_tesseract_txt <- strsplit(current_tesseract_txt,"\n")[[1]]
   clean_tesseract_txt <- clean_tesseract_txt[clean_tesseract_txt!=""]
   
