--- a/doc/main.Rmd
+++ b/doc/main.Rmd
@@ -82,10 +82,10 @@ if (!require("quanteda")) {
 }
 library(quanteda)
 
-if (!require("e1071")) {
-  install.packages("e1071")
+if (!require("caret")) {
+  install.packages("caret")
 }
-library(e1071)
+library(caret)
 
 pacman::p_load(knitr, readr, stringr, tesseract, vecsets)
 file_name_vec <- list.files("../data/ground_truth") #100 files in total
@@ -176,11 +176,52 @@ save(dat, file="../output/data.RData")
 * ###Cross Validation
 
 ```{r}
-# cv_ind <- sample(1:nrow(feature_dat), 10000, replace = FALSE)
-# cv_feature_dat <- feature_dat[cv_ind, ]
-# cv_label_dat <- label_dat[cv_ind, ]
-# cv <- tune(svm, train.x=cv_feature_dat, train.y=cv_label_dat$label, 
-#               kernel="radial", ranges=list(cost=10^(-1:2), gamma=c(.5,1,2)))
+#Defining the groupname in the data column
+dat <- dat %>% mutate(group_num = case_when(file_num %in% c(1:10)~"A",
+                                            file_num %in% c(11:38)~"B",
+                                            file_num %in% c(39:41)~"C",
+                                            file_num %in% c(42:68)~"D",
+                                            file_num %in% c(69:100)~"E"
+))
+
+# Changing the levels of the labels
+dat <- dat %>% mutate(label = case_when(label == 1 ~"Correct",
+                                        label == 0 ~"Error"))
+
+# Converting labels to factors
+dat$label <- factor(dat$label)
+# Splitting the dataset by groups
+groupsplit <- split(dat,dat$group_num)
+
+# Results
+a <- svm.func(groupsplit$A)
+b <- svm.func(groupsplit$B)
+c <- svm.func(groupsplit$C)
+d <- svm.func(groupsplit$D)
+e <- svm.func.2(groupsplit$E)
+
+#Saving the outputs
+abcd <- rbind(matrix(a$pred),matrix(b$pred),matrix(c$pred),matrix(d$pred),matrix(e$pred))
+abcd.list <- list(abcd)
+
+# Saving the results
+save(abcd, file = "../output/tempSvmLabels.RData")
+save(abcd.list, file = "../output/listtempSvmLabels.RData")
+
+confs <- cbind(a$conf$overall[1],b$conf$overall[1],c$conf$overall[1],d$conf$overall[1],e$conf$overall[1])
+colnames(confs) <- c("Group 1","Group 2","Group 3","Group 4","Group 5")
+
+save(confs, file = "../output/accuracy.RData")
+
+
+detected_tokens <- cbind(rbind(matrix(groupsplit$A$error_token),
+                               matrix(groupsplit$B$error_token),
+                               matrix(groupsplit$C$error_token),
+                               matrix(groupsplit$D$error_token),
+                               matrix(groupsplit$E$error_token)), abcd)
+colnames(detected_tokens) <- c("Tesseract Output","SVM Label")
+
+save(detected_tokens, file = "./output/detected_tokens.RData")
 ```
 
 # Step 4 - Error correction
