--- a/doc/main.Rmd
+++ b/doc/main.Rmd
@@ -14,49 +14,6 @@ output:
     code_folding: hide
 ---
 
-Jing Wu
-
-GU4243/GR5243: Applied Data Science
-
-<style type="text/css">
-h1.title {
-  font-size: 24px;
-  color: Black;
-}
-h1 { /* Header 1 */
-  font-size: 24px;
-  color: Black;
-}
-h2 { /* Header 2 */
-  font-size: 20px;
-  color: Black;
-}
-h3 { /* Header 3 */
-  font-size: 16px;
-  color: Black;
-}
-h4 { /* Header 4 */
-  font-size: 14px;
-  color: Grey;
-}
-</style>
-# Introduction {-}
-
-Optical character recognition (OCR) is the process of converting scanned images of machine printed or
-handwritten text (numerals, letters, and symbols), into machine readable character streams, plain (e.g. text files) or formatted (e.g. HTML files). As shown in Figure 1, the data *workflow* in a typical OCR system consists of three major stages:
-
-* Pre-processing
-
-* OCR character recognition
-
-* Post-processing
-
-![](../figs/ocr_flowchart.png) 
-
-We have processed raw scanned images through the first two steps are relying on the [Tessearct OCR machine](https://en.wikipedia.org/wiki/Tesseract_(software)). R package tutorial can be found [here](https://www.r-bloggers.com/the-new-tesseract-package-high-quality-ocr-in-r/). 
-
-BUT this is not the FOCUS of this project!!!
-
 In this project, we are going to **focus on the third stage -- post-processing**, which includes two tasks: *error detection* and *error correction*.  
 
 # Step 1 - Load library and source code
@@ -129,7 +86,7 @@ The referenced papers are:
 - features are in section 5 (you can choose not to implement ‘Levenshtein distance’ feature)
 
 
-In this statercode, we implement the first three rules in the first paper -- rule based techniques, as an example.
+In this part, we implement fourteen features in the D-3 paper (SVM classification) and generate the labels for training.
 
 * ###Feature and Label Construction
 
@@ -255,7 +212,7 @@ The referenced papers are:
 
 5. [topic models](https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=4377099)
 
-Here, in our code, we just simply remove the detected-errors.
+We follow the correction algorithm in C-3.
 ```{r}
 load("../output/detected_tokens.RData") #258977
 # filter the tokens that detected as zero
