--- a/doc/main.Rmd
+++ b/doc/main.Rmd
@@ -231,21 +231,48 @@ where *items* refer to either characters or words, and ground truth is the origi
 
 Both *precision* and *recall* are mathematically convenient measures because their numeric values are some decimal fractions in the range between 0.0 and 1.0, and thus can be written as percentages. For instance, recall is the percentage of words in the original text correctly found by the OCR engine, whereas precision is the percentage of correctly found words with respect to the total word count of the OCR output. Note that in the OCR-related literature, the term OCR accuracy often refers to recall.
 
-Here, we only finished the **word level evaluation** criterions, you are required to complete the **letter-level** part.
-
 ```{r}
-ground_truth_vec <- str_split(paste(current_ground_truth_txt, collapse = " ")," ")[[1]] #1078
-old_intersect_vec <- vecsets::vintersect(tolower(ground_truth_vec), tolower(tesseract_vec)) #607
-new_intersect_vec <- vecsets::vintersect(tolower(ground_truth_vec), tolower(tesseract_delete_error_vec)) #600
+load("../output/FinalDataframe.RData")
+load("../output/ALLgroundtruth_vec.RData")
+
+# word level evaluation
+# old interaction
+old_intersect_vec <- dat$error_token[dat$label == 1]
+# new interaction
+new_intersect_vec <- vecsets::vintersect(tolower(dat$true_token[dat$label == 0]), 
+                                         tolower(dat$corrected_token[dat$label == 0]))
+new_intersect_vec2 <- c(old_intersect_vec, new_intersect_vec)
 
 OCR_performance_table <- data.frame("Tesseract" = rep(NA,4),
                                     "Tesseract_with_postprocessing" = rep(NA,4))
 row.names(OCR_performance_table) <- c("word_wise_recall","word_wise_precision",
-                                                 "character_wise_recall","character_wise_precision")
-OCR_performance_table["word_wise_recall","Tesseract"] <- length(old_intersect_vec)/length(ground_truth_vec)
-OCR_performance_table["word_wise_precision","Tesseract"] <- length(old_intersect_vec)/length(tesseract_vec)
-OCR_performance_table["word_wise_recall","Tesseract_with_postprocessing"] <- length(new_intersect_vec)/length(ground_truth_vec)
-OCR_performance_table["word_wise_precision","Tesseract_with_postprocessing"] <- length(new_intersect_vec)/length(tesseract_delete_error_vec)
+                                      "character_wise_recall","character_wise_precision")
+OCR_performance_table["word_wise_recall","Tesseract"] <- length(old_intersect_vec)/length(ALLgroundtruth_vec)
+OCR_performance_table["word_wise_precision","Tesseract"] <- length(old_intersect_vec)/length(dat$error_token)
+OCR_performance_table["word_wise_recall","Tesseract_with_postprocessing"] <- length(new_intersect_vec2)/length(ALLgroundtruth_vec)
+OCR_performance_table["word_wise_precision","Tesseract_with_postprocessing"] <- length(new_intersect_vec2)/length(dat$error_token)
+
+# character-level evaluation
+# old interaction
+ground_truth_vec_char <- str_split(paste(ALLgroundtruth_vec, collapse = ""), "")[[1]]
+tesseract_vec_char <- str_split(paste(dat$error_token, collapse = ""), "")[[1]]
+old_intersect_vec_char <- str_split(paste(dat$error_token[dat$label == 1], collapse = ""), "")[[1]]
+# new interaction
+# function used to compare pairs of words in character level
+df <- data.frame(true_token=dat$true_token[dat$label == 0], 
+                 corrected_token=dat$corrected_token[dat$label == 0])
+fun <- function(row) {
+  return(vecsets::vintersect(str_split(tolower(row[1]),"")[[1]],
+                             str_split(tolower(row[2]),"")[[1]]))
+}
+correct_char = apply(as.matrix(df), 1, fun)
+new_intersect_vec_char <- c(old_intersect_vec_char, unlist(correct_char))
+
+OCR_performance_table["character_wise_recall","Tesseract"] <- length(old_intersect_vec_char)/length(ground_truth_vec_char)
+OCR_performance_table["character_wise_precision","Tesseract"] <- length(old_intersect_vec_char)/length(tesseract_vec_char)
+OCR_performance_table["character_wise_recall","Tesseract_with_postprocessing"] <- length(new_intersect_vec_char)/length(ground_truth_vec_char)
+OCR_performance_table["character_wise_precision","Tesseract_with_postprocessing"] <- length(new_intersect_vec_char)/length(tesseract_vec_char)
+
 kable(OCR_performance_table, caption="Summary of OCR performance")
 ```
 
